--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rps-game",
-  "homepage": "https://RidaBoukhalfa.github.io/RSP_Game",
+  "homepage": "https://ridaboukhalfa.github.io/gameRPS/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
